Update additional tasks

--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -44,20 +44,46 @@
     value: 1
     state: present
 
-#sudo iptables -t nat -A PREROUTING -p tcp -d 169.254.170.2 --dport 80 -j DNAT --to-destination 127.0.0.1:51679
-#sudo iptables -t nat -A OUTPUT -d 169.254.170.2 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 51679
-#sudo iptables -A INPUT -i eth0 -p tcp --dport 51678 -j DROP
-#sudo sh -c 'iptables-save > /etc/sysconfig/iptables'
-#sudo mkdir -p /etc/ecs && sudo touch /etc/ecs/ecs.config
+- name: Add iptables PREROUTING rule
+  shell:
+    cmd: iptables -t nat -A PREROUTING -p tcp -d 169.254.170.2 --dport 80 -j DNAT --to-destination 127.0.0.1:51679
 
-#sudo docker run --name ecs-agent \
-#--detach=true \
-#--privileged \
-#--restart=on-failure:10 \
-#--volume=/var/run:/var/run \
-#--volume=/var/log/ecs/:/log:Z \
-#--volume=/var/lib/ecs/data:/data:Z \
-#--volume=/etc/ecs:/etc/ecs \
-#--net=host \
-#--env-file=/etc/ecs/ecs.config \
-#amazon/amazon-ecs-agent:latest
+- name: Add iptables OUTPUT rule
+  shell:
+    cmd: iptables -t nat -A OUTPUT -d 169.254.170.2 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 51679
+
+- name: Add iptables INPUT rule
+  shell:
+    cmd: iptables -A INPUT -i eth0 -p tcp --dport 51678 -j DROP
+
+- name: Save iptables rules
+  shell:
+    cmd: 'iptables-save > /etc/sysconfig/iptables'
+
+- name: Create ECS config directory
+  file:
+    name: '/etc/ecs'
+    state: directory
+
+- name: Configure ECS
+  template:
+    src: 'ecs.config.j2'
+    dest: '/etc/ecs/ecs.config'
+
+- name: Start ECS agent container
+  docker_container:
+    name: 'ecs-agent'
+    image: 'amazon/amazon-ecs-agent:latest'
+    state: started
+    restart: true
+    restart_retries: 10
+    restart_policy: on-failure
+    privileged: true
+    network_mode: host
+    interactive: false
+    env_file: '/etc/ecs/ecs.config'
+    volumes:
+      - '/var/run:/var/run'
+      - '/var/log/ecs/:/log:Z'
+      - '/var/lib/ecs/data:/data:Z'
+      - '/etc/ecs:/etc/ecs'
