--- a/tasks/main.yml
+++ b/tasks/main.yml
@@ -2,15 +2,14 @@
 # tasks file for ecs-rhel
 
 - name: Add EPEL repository
-  yum_repository:
-    name: epel
-    description: EPEL YUM repo
-    baseurl: 'https://download.fedoraproject.org/pub/epel/$releasever/$basearch/'
+  package:
+    name: 'https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm'
+    state: present
 
 - name: Enable rhel-7-server-rhui-extras-rpms
   ini_file:
     path: /etc/yum.repos.d/redhat-rhui.repo
-    section: rhel-7-server-rhui-extras-rpms
+    section: rhui-rhel-7-server-rhui-extras-rpms
     option: enabled
     value: 1
     mode: '0644'
@@ -19,7 +18,7 @@
 - name: Enable rhel-7-server-rhui-optional-rpms
   ini_file:
     path: /etc/yum.repos.d/redhat-rhui.repo
-    section: rhel-7-server-rhui-optional-rpms
+    section: rhui-rhel-7-server-rhui-optional-rpms
     option: enabled
     value: 1
     mode: '0644'
@@ -29,6 +28,16 @@
   import_role:
     name: geerlingguy.docker
   
+- name: Install pip
+  package:
+    name: python2-pip
+    state: present
+
+- name: Install python docker module
+  pip:
+    name: docker
+    state: present
+
 - name: Pull ecs agent docker image
   docker_image:
     name: 'docker.io/amazon/amazon-ecs-agent'
