--- a/tasks/prepare_ami.yml
+++ b/tasks/prepare_ami.yml
@@ -1,139 +1,11 @@
 ---
 # tasks file for ecs-rhel
 
-- name: Prepare | Add EPEL repository
-  package:
-    name: 'https://dl.fedoraproject.org/pub/epel/epel-release-latest-7.noarch.rpm'
-    state: present
-  when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version == "7"
-
-- name: Prepare | Add EPEL repository
-  dnf:
-    name: 'https://dl.fedoraproject.org/pub/epel/epel-release-latest-8.noarch.rpm'
-    disable_gpg_check: true
-    state: present
-  when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version == "8"
-
-- name: Prepare | Enable rhel-7-server-rhui-extras-rpms
-  ini_file:
-    path: /etc/yum.repos.d/redhat-rhui.repo
-    section: rhel-7-server-rhui-extras-rpms
-    option: enabled
-    value: 1
-    mode: '0644'
-    backup: false
-  when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version == "7"
-
-- name: Prepare | Enable rhel-7-server-rhui-optional-rpms
-  ini_file:
-    path: /etc/yum.repos.d/redhat-rhui.repo
-    section: rhel-7-server-rhui-optional-rpms
-    option: enabled
-    value: 1
-    mode: '0644'
-    backup: false
-  when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version == "7"
-
-- name: Prepare | Add docker yum repo
-  become: true
-  copy:
-    src: 'docker-ce.repo'
-    dest: '/etc/yum.repos.d/docker-ce.repo'
-    owner: root
-    group: root
-    mode: 0644
-  when:
-    - ansible_os_family == 'RedHat'
-    - ansible_distribution_major_version == "7"
-
-- name: Install python 3 for RHEL 8
-  package:
-    name: '{{ item }}'
-    state: present
-  with_items:
-    - python3
-    - python3-devel
-    - python3-pip
-
-- name: Prepare | Install docker-ce
-  import_role:
-    name: geerlingguy.docker
-  vars:
-    docker_users:
-      - 'ec2-user'
-  tags:
-    - install_docker
-  
-- name: Prepare | Install pip
-  package:
-    name: python2-pip
-    state: present
-
-- name: Prepare | Install python docker module
-  pip:
-    name: docker
-    state: present
-
-- name: Prepare | Pull ecs agent docker image
-  docker_image:
-    name: 'docker.io/amazon/amazon-ecs-agent'
-    tag: 'latest'
-    source: pull
-
 - name: Prepare | Enable localnet in sysctl
   sysctl:
     name: 'net.ipv4.conf.all.route_localnet'
-    value: 1
+    value: '1'
     state: present
-
-- name: Prepare | Add iptables PREROUTING rule
-  iptables:
-    table: nat
-    chain: PREROUTING
-    protocol: tcp
-    destination: '169.254.170.2'
-    destination_port: '80'
-    jump: DNAT
-    to_destination: '127.0.0.1:51679'
-  tags:
-    - iptables
-
-- name: Prepare | Add iptables OUTPUT rule
-  iptables:
-    table: nat
-    chain: OUTPUT
-    protocol: tcp
-    destination: '169.254.170.2'
-    match: tcp
-    destination_port: '80'
-    jump: REDIRECT
-    to_ports: '51679'
-  tags:
-    - iptables
-
-- name: Prepare | Add iptables INPUT rule
-  iptables:
-    chain: INPUT
-    jump: DROP
-    protocol: tcp
-    in_interface: 'eth0'
-    destination_port: '51678'
-  tags:
-    - iptables
-
-- name: Prepare | Save iptables rules
-  shell:
-    cmd: 'iptables-save > /etc/sysconfig/iptables'
-  tags:
-    - iptables
 
 - name: Prepare | Create ECS config directory
   file:
@@ -148,16 +20,10 @@
     src: 'ecs.config.j2'
     dest: '/etc/ecs/ecs.config'
 
-- name: Create systemd unit for starting ECS agent
-  copy:
-    src: 'ecs-agent.service'
-    dest: '/etc/systemd/system/docker-container@ecs-agent.service'
+- name: Install and configure docker
+  import_tasks: prepare_docker.yml
+  when: ( podman is false )
 
-  # Don't start the service yet. This system could be an AMI template
-- name: Enable the ECS agent systemd service and ensure it is not masked
-  systemd:
-    name: 'docker-container@ecs-agent.service'
-    enabled: true
-    state: stopped
-    masked: false
-    daemon_reload: true
+- name: Install and configure podman
+  import_tasks: prepare_podman.yml
+  when: ( podman is true )
