--- a/tasks/prepare_docker.yml
+++ b/tasks/prepare_docker.yml
@@ -23,7 +23,7 @@
     path: /etc/yum.repos.d/redhat-rhui.repo
     section: rhel-7-server-rhui-extras-rpms
     option: enabled
-    value: 1
+    value: '1'
     mode: '0644'
     backup: false
   when:
@@ -35,7 +35,7 @@
     path: /etc/yum.repos.d/redhat-rhui.repo
     section: rhel-7-server-rhui-optional-rpms
     option: enabled
-    value: 1
+    value: '1'
     mode: '0644'
     backup: false
   when:
